crates/ruff_python_formatter/tests/snapshots/format@stub_files__comments.pyi.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
class SupportsAnext:
    def __anext__(self): ...

# Comparison protocols

class SupportsDunderLT:
    def __init__(self): ...
```

## Output
```python
class SupportsAnext:
    def __anext__(self): ...

# Comparison protocols

class SupportsDunderLT:
    def __init__(self): ...
```
